# apertium-en-pt

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-en-pt.en-pt.dix  apertium-en-pt.en-pt.t1x  apertium-en-pt.en-pt.t2x  apertium-en-pt.en-pt.t3x  apertium-en-pt.en.metadix  apertium-en-pt.en.tsx  apertium-en-pt.post-pt.dix  apertium-en-pt.pt-en.t1x  apertium-en-pt.pt-en.t2x  apertium-en-pt.pt-en.t3x  apertium-en-pt.pt.dix  apertium-en-pt.pt.tsx  configure.ac  modes.xml  pt-en.prob
test/: en-pt-chunker-expected.txt  en-pt-generator-expected.txt  en-pt-input.txt  en-pt-interchunk-expected.txt  en-pt-morph-expected.txt  en-pt-postchunk-expected.txt  en-pt-pretransfer-expected.txt  en-pt-tagger-expected.txt  pt-en-input.txt  pt-en-interchunk-expected.txt  pt-en-morph-expected.txt  pt-en-postchunk-expected.txt  pt-en-postgen-expected.txt  pt-en-tagger-expected.txt  tests.json
